# RestAPISQLAlchemyContactManagerV2

./: README.md  api.py  auth.py  endpoints.py  jwt_utils.py  main.py  models.py  pyproject.toml  routes.py
api/: api.py  routes.py
auth/: auth.py  auths.py  jwt_utils.py
templates/: base.html  index.html
