[tool.poetry]
name = "restapisqlalchemycontactmanagerv2"
version = "0.1.0"
description = "Yeap"
authors = ["CamilleusRex <camilleusrex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
